finished modulo cleaning up

--- a/game/metaButtons.html
+++ b/game/metaButtons.html
@@ -1,6 +1,6 @@
 <script src="../scripts/metaButtons.js"></script>
 
-<button data-modal-target="#story">Story</button>
+<button data-modal-target="#story">Background story</button>
 <div class="modal" id="story">
     <div class="modal-header">
 	<div class="title">Background story</div>
@@ -30,30 +30,36 @@
     <div class="modal-body">
 	<p>Chart the land, compute its fundamental group and find the homotopy class of the old path.</p>
 	<ul>
-	    <li>Units of length are measured with respect to the taxi distance in what follows.</li>
-	    <li>Group members cannot be further apart than 3 units during a daily exploration.
+	    <li>The daily exploration lasts only up to 16 hours; it takes 1 hour to move in any of the 4 cardinal directions.</li>
+		<li>The daily exploration takes place in randomly assigned BBB groups.</li>
+	    <li>Group members cannot be further apart than 3 units (taxi-distance) during a daily exploration.
 		<strong>Hint-Warning:</strong> too much forking may lead to sticky situations.</li>
-	    <li>If the previous rule is broken, all players in a group will go back to were they previously were and will lose one hour in the procsess.</li>
-	    <li>The daily exploration lasts only up to 16 hours; it takes 1 hour to move 1 unit of distance in any direction.</li>
+	    <li>If the previous rule is broken, all players in a group should go back to were they previously were and will lose one hour in the procsess.</li>
+	    <li>If something funny happens and you don't know how to get out of it, start the game over from the base camp (e.g. click the link again) and then try to get back to the place you were before without stopping to answer any questions along the way.</li>
 	</ul>
     </div>
 </div>
 <div id="overlay"></div>
 
-<!--
-<button data-modal-target="#credits">Credits</button>
+<button data-modal-target="#credits">Acknowledgements</button>
 <div class="modal" id="credits">
     <div class="modal-header">
 	<div class="title">Acknowledgements</div>
 	<button data-close-button class="close-button">&times;</button>
     </div>
     <div class="modal-body">
-	<p>Many thanks to Daniel Fix, Vera Gahlen, Sebastian Goette and Mauro Sanchiz for their useful suggestions!</p>
+	<p>Many thanks to Daniel Fix, Vera Gahlen, Sebastian Goette, Mauro Sanchiz and David Trillo for their useful suggestions!</p></br>
 
-	<p>This game was inspired by a small game developed some years ago by Mauro Sanchiz and Guillermo S&aacute;nchez.
-	Feel free to try it <strong style="color: red;">here</strong>.
-	<strong>Warning:</strong> the game is written in spanish and the language may be a bit unfriendly at some points.</p>
+	<p>This game was inspired by a &quot;Mauro and Guille's non graphic adventure&quot;, a small game developed some years ago by Mauro Sanchiz and Guillermo S&aacute;nchez.
+	The game used windows folders and shortcuts with small .txt files for flavour.</p></br>
+
+	<p>About the questions:</p>
+	<ul>
+	    <li>The ones about Freiburg and its history are directly taken from the <a href="https://www.breisgau-geschichtsverein.de/de/freiburg-quiz/archiv.php">Freiburg Quiz-Archiv</a> of the Breisgau-Geschichtsverein Schauinsland.</li>
+	    <li>Many of the science questions were directly suggested by David Trillo or directly taken from the 2017 edition of &quot;Saber y Beber&quot;, a quiz-contest at the Complutense University of Madrid which he helped to organize.</li>
+	    <li>The knot puzzles were also David's idea.</li>
+	    <li>Many of the math puzzles and problems are directly taken from Arthur Engel's 1998 book &quot;Problem-Solving Strategies&quot;.</li>
+	</ul>
     </div>
 </div>
 <div id="overlay"></div>
--->
