--- a/game/metaButtons.html
+++ b/game/metaButtons.html
@@ -41,17 +41,19 @@
 </div>
 <div id="overlay"></div>
 
-<button data-modal-target="#credits">Acknowledgements</button>
+<button data-modal-target="#credits">Credits</button>
 <div class="modal" id="credits">
     <div class="modal-header">
-	<div class="title">Acknowledgements</div>
+	<div class="title">Credits</div>
 	<button data-close-button class="close-button">&times;</button>
     </div>
     <div class="modal-body">
-	<p>Many thanks to Daniel Fix, Vera Gahlen, Sebastian Goette, Mauro Sanchiz and David Trillo for their useful suggestions!</p></br>
+        <p>Written by Pedro N&uacute;&ntilde;ez.</p>
+
+	<p>Many thanks to Daniel Fix, Vera Gahlen, Sebastian Goette, Mauro Sanchiz and David Trillo for their useful suggestions!</p>
 
 	<p>This game was inspired by a &quot;Mauro and Guille's non graphic adventure&quot;, a small game developed some years ago by Mauro Sanchiz and Guillermo S&aacute;nchez.
-	The game used windows folders and shortcuts with small .txt files for flavour.</p></br>
+	The game used windows folders and shortcuts with small .txt files for flavour.</p>
 
 	<p>About the questions:</p>
 	<ul>
